
2006-03-11 tmb

 * Added EndNote Input plugin

2006-03-14 cjg

 * Deprecated create class method on dataobj's in favour of the create_object
    method on $dataset (which could do with renaming).
 * Fixed a bug in the validate subject id method.
 * Cleaned up some variable names and calls to create.

2006-03-15 cjg

 * Removed render_opts property. Each render_opt becomes a property in its
    own right. Closes #1989.

2006-03-16 cjg
 
 * Added an XML tidy method to produce indented XML.

2006-03-21 tdb

 * Removed METS test plugin (no relevant profile for eprints)
 * Added Dissertation ContextObject support
 * Few fixes to OpenURL Output
 * Added ContextObject to OAI outputs

2006-03-21 cjg

 * Changed dates (and times) to use INT's with NULL indicating an unknown value.

2006-03-21 cjg

 * Updated bin/upgrade to get more of the way from 2.3 to the next release. Not
    quite there yet. 

2006-03-22 cjg

 * Moved around Output::ContextObject - made it a little easier to understand.

2006-03-22 cjg
 
 * Added an error if the dataset is requested from an eprint with no 
    eprint_status 
 * Added HTML and ASCII output plugins
 * Added system to detect broken plugins and disable them
 * import and export scripts now warn of broken plugins, and can explain why
 * EndNote now correctly registers as broken if the required modules are not 
    installed.
 * Renamed parameters and methods in plugins to call eprints data structures
    epdata rather than data.
 * Input plugins now take a file handle rather than a string. Possibly later
    they should except either.
 * Added new input method for XML plugins: xml_to_dataobj which just calls
    xml_to_epdata, which should be subclassed.
 * Renamed the accesslog dataset to access for consistancy
 * Disabled the privilages dataset
 * Added an under construction flag to documents so that they don't cause an
    eprint to be re-commited when they are constructed. 
 * Rearranged code in LogHandler for readability
